--- a/src/client/components/Queues/index.scss
+++ b/src/client/components/Queues/index.scss
@@ -1,4 +1,6 @@
 .Queues {
+	&__close {
+		max-width: var(--info-height); }
 	&__section {
 		margin-bottom: 12px;
 		border-radius: var(--border-radius);
