--- a/src/client/components/Player/index.scss
+++ b/src/client/components/Player/index.scss
@@ -2,8 +2,8 @@
 	top: 0;
 	left: 0;
 	z-index: 3;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	position: absolute;
 	&__main {
 		top: 50%;
@@ -36,6 +36,7 @@
 		&-title {
 			display: flex;
 			align-items: center;
+			margin-left: var(--info-height);
 			&-text {
 				font-size: 30rem;
 				font-weight: 700; }
@@ -48,9 +49,9 @@
 			margin-top: var(--space-double);
 			&-icon {
 				--size: 50rem;
-				width: var(--size);
-				height: var(--size);
+				min-width: var(--size);
 				font-size: var(--size);
+				min-height: var(--size);
 				color: var(--text-color); } }
 		&-artists {
 			font-size: 20rem;
