--- a/src/client/components/Player/index.scss
+++ b/src/client/components/Player/index.scss
@@ -29,7 +29,8 @@
 		flex-direction: column;
 		&-cover {
 			width: 100%;
-			margin-bottom: var(--space-double); }
+			margin-bottom: var(--space-double);
+			border-radius: calc(var(--border-radius) * 2); }
 		&-text {
 			text-align: center;
 			margin-bottom: var(--space-half); }
