--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -50,6 +50,4 @@
 			border-right: 1px solid var(--border-color);
 			padding: var(--space-three-quart) var(--space-one-half);
 			&-active {
-				background-color: var(--button-hover-color); } } }
-	&__content {
-		padding-bottom: var(--space); } }
+				background-color: var(--button-hover-color); } } } }
