--- a/src/client/components/Bar/index.scss
+++ b/src/client/components/Bar/index.scss
@@ -3,6 +3,9 @@
 	display: flex;
 	flex-direction: row;
 	height: var(--player-height);
+	@media (max-width: 800px) {
+		flex-direction: column-reverse;
+		height: var(--player-height-mobile); }
 	&__fullscreen {
 		width: 100%;
 		height: 100%;
@@ -54,14 +57,24 @@
 		color: var(--text-color); }
 	&__main,
 	&__controls {
-		padding: var(--space-half) var(--space); }
+		@media (min-width: 800px) {
+			padding: var(--space-half) var(--space); } }
 	&__controls {
-		border-right: 1px solid var(--border-color); }
+		@media (min-width: 800px) {
+			border-right: 1px solid var(--border-color); }
+		@media (max-width: 800px) {
+			justify-content: center;
+			padding: var(--space-quart);
+			border-top: 1px solid var(--border-color); } }
 	&__main {
 		width: 100%;
+		height: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
+		@media (max-width: 800px) {
+			padding: var(--space-half);
+			justify-content: space-between; }
 		&-content {
 			display: flex;
 			height: var(--info-height);
