--- a/src/client/components/Bar/index.scss
+++ b/src/client/components/Bar/index.scss
@@ -12,13 +12,18 @@
 		background-color: var(--background-color);
 		&-main {
 			top: 50%;
-			left: 50%;
-			width: 600px;
 			display: flex;
 			position: absolute;
 			align-items: center;
 			flex-direction: column;
-			transform: translate(-50%, -50%); }
+			@media (min-width: 800px) {
+				left: 50%;
+				width: 600px;
+				transform: translate(-50%, -50%); }
+			@media (max-width: 800px) {
+				width: 100%;
+				padding: var(--space);
+				transform: translateY(-50%); } }
 		&-cover {
 			width: 100%;
 			margin-bottom: var(--space-double);
