--- a/src/client/components/Icon/index.scss
+++ b/src/client/components/Icon/index.scss
@@ -1,4 +1,5 @@
 .Icon {
+	border: 0;
 	padding: 3rem;
 	outline: none;
 	display: block;
@@ -6,6 +7,7 @@
 	user-select: none;
 	border-radius: 100%;
 	overflow: hidden !important;
+	background-color: transparent;
 	min-width: var(--info-height);
 	min-height: var(--info-height);
 	color: var(--text-color-light);
