--- a/src/client/components/Search/index.scss
+++ b/src/client/components/Search/index.scss
@@ -1,5 +1,6 @@
 .Search {
 	&__bar {
+		position: relative;
 		padding: var(--space) 0;
 		&-input {
 			border: 0;
@@ -8,8 +9,14 @@
 			font-size: 20rem;
 			text-align: center;
 			padding: var(--space-half);
-			border-bottom: 2px solid #333;
-			background-color: transparent; } }
+			background-color: transparent;
+			color: var(--text-color-light);
+			border-bottom: 2px solid var(--text-color-light);
+			&-close {
+				right: 0;
+				position: absolute;
+				top: calc(50% - 1px);
+				transform: translateY(-50%); } } }
 	&__content {
 		height: 100%;
 		margin-bottom: var(--space-double); } }
