--- a/src/client/components/AlbumPage/index.scss
+++ b/src/client/components/AlbumPage/index.scss
@@ -19,7 +19,7 @@
 	&__genres {
 		font-size: 17rem;
 		font-weight: 400; }
-	&__footer-sum {
+	&__sum {
 		outline: none;
 		cursor: pointer;
 		display: inline;
