--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -39,6 +39,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
+			cursor: zoom-in;
 			position: absolute;
 			background:
 				radial-gradient(ellipse farthest-corner at center center, rgba(#000, 0.3) 20%, rgba(#000, 0.7) 100%)
