--- a/src/client/components/Button/index.scss
+++ b/src/client/components/Button/index.scss
@@ -1,20 +1,29 @@
 .Button {
 	border: 0;
 	outline: none;
-	display: block;
+	display: flex;
 	cursor: pointer;
-	overflow: hidden !important;
-	min-width: var(--info-height);
-	min-height: var(--info-height);
-	background-color: transparent;
-	color: var(--text-color-light);
+	align-items: center;
+	background-color: #eee;
+	height: var(--info-height);
+	padding: 0 var(--space-half);
 	border-radius: var(--border-radius);
-	font-size: calc(var(--info-height) - 6rem);
 	transition: var(--transition-duration) background-color;
 	&:hover {
 		background-color: #e0e0e0; }
+	&:active {
+		background-color: #bdbdbd; }
 	&__icon,
 	&__text {
-		user-select: none; }
+		user-select: none;
+		color: var(--text-color-light); }
 	&__icon {
-		font-size: var(--info-height); } }
+		font-size: 20rem; }
+	&__spacer {
+		width: 4rem;
+		height: 100%; }
+	&__text {
+		margin-top: 1px;
+		font-size: 15rem;
+		font-weight: 700;
+		text-transform: uppercase; } }
