--- a/src/client/components/Item/index.scss
+++ b/src/client/components/Item/index.scss
@@ -1,5 +1,7 @@
 .Item {
 	--gap: calc(var(--space) * 0.4);
+	display: flex;
+	align-items: center;
 	@media (max-width: 800px) {
 		--gap: calc(var(--space) * 0.3); }
 	&:hover &__in-lib {
@@ -24,12 +26,13 @@
 		@media (max-width: 800px) {
 			border-radius: 100%; } }
 	&__info {
-		width: 100%;
+		flex-grow: 1;
+		display: flex;
 		overflow-x: hidden;
+		align-items: center;
 		height: var(--info-height);
 		justify-content: space-between;
 		&-left {
-			width: 100%;
 			&-upper,
 			&-lower {
 				margin: 0;
