--- a/src/client/components/Navigation/index.scss
+++ b/src/client/components/Navigation/index.scss
@@ -1,43 +1,27 @@
 .Navigation {
-	padding-bottom: var(--space-quart);
-	@media (max-width: 800px) {
-		justify-content: center; }
-	@media (max-width: 600px) {
-		justify-content: space-between; }
+	&__links {
+		@media (max-width: 800px) {
+			justify-content: center; }
+		@media (max-width: 600px) {
+			justify-content: space-between; } }
 	&__link {
-		--text-height: 20rem;
-		width: auto;
-		height: 100%;
-		display: flex;
 		position: relative;
-		align-items: center;
-		text-decoration: none;
-		@media (max-width: 450px) {
-			margin: 0; }
-		&-icon,
-		&-text {
-			font-size: var(--text-height); }
-		&-icon {
-			margin-left: -4px;
-			margin-right: 4px;
-			color: var(--text-color);
-			min-width: var(--text-height);
-			min-height: var(--text-height);
-			@media (max-width: 450px) {
-				margin-right: 0; }
-			&:hover {
-				background-color: transparent !important; } }
-		&-text {
-			font-weight: 600;
-			padding-right: 4px;
-			text-decoration: none;
-			text-transform: uppercase; } }
+		&-button {
+			padding: 0;
+			border-bottom-left-radius: 0;
+			border-bottom-right-radius: 0;
+			background-color: transparent;
+			&:hover,
+			&:active {
+				background-color: transparent; }
+			&-text {
+				color: var(--text-color); } } }
 	&__active {
 		&::after {
+			width: 100%;
 			height: 2px;
 			content: "";
 			bottom: -2px;
 			position: absolute;
 			border-radius: 4px;
-			background-color: #333;
-			width: 100%; } } }
+			background-color: #333; } } }
