--- a/src/client/components/Pages/index.scss
+++ b/src/client/components/Pages/index.scss
@@ -1,10 +1,7 @@
 .Pages {
 	z-index: 1;
-	display: flex;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	height: calc(100vh - var(--header-height) - var(--player-height));
 	@media(max-width: 800px) {
-		height: calc(100vh - var(--header-height) - var(--player-height-mobile)); }
-	&__content {
-		overflow-x: hidden;
-		overflow-y: scroll;
-		width: var(--content-width); } }
+		height: calc(100vh - var(--header-height) - var(--player-height-mobile)); } }
