--- a/src/client/components/Item/index.scss
+++ b/src/client/components/Item/index.scss
@@ -2,6 +2,7 @@
 	--gap: calc(var(--space) * 0.4);
 	display: flex;
 	align-items: center;
+	height: var(--info-height);
 	@media (max-width: 800px) {
 		--gap: calc(var(--space) * 0.3); }
 	&:hover &__in-lib {
