--- a/src/client/components/Button/index.scss
+++ b/src/client/components/Button/index.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	cursor: pointer;
 	align-items: center;
+	justify-content: center;
 	height: var(--info-height);
 	padding: 0 var(--space-half);
 	border-radius: var(--border-radius);
