--- a/src/client/components/Icon/index.scss
+++ b/src/client/components/Icon/index.scss
@@ -1,7 +1,6 @@
 .Icon {
 	border: 0;
 	padding: 3rem;
-	outline: none;
 	display: block;
 	cursor: pointer;
 	user-select: none;
@@ -14,4 +13,6 @@
 	font-size: calc(var(--info-height) - 6rem);
 	transition: var(--transition-duration) background-color;
 	&:hover {
-		background-color: #e0e0e0; } }
+		background-color: #e0e0e0; }
+	&:active {
+		outline: none; } }
