--- a/src/client/components/ModalButton/index.scss
+++ b/src/client/components/ModalButton/index.scss
@@ -1,14 +1,14 @@
 .ModalButton {
-	border: 0;
-	width: 100%;
 	width: 400rem;
 	outline: none;
-	display: block;
 	cursor: pointer;
+	border-radius: none;
 	background-color: transparent;
 	transition: 0.2s background-color;
 	border-bottom: 1px solid var(--border-color);
 	&:hover {
 		background-color: var(--hover-color); }
 	&:last-child {
-		border-bottom: 0; } }
+		border-bottom: 0; }
+	&__span {
+		color: var(--text-color); } }
