--- a/src/client/components/Sidebar/index.scss
+++ b/src/client/components/Sidebar/index.scss
@@ -1,12 +1,26 @@
 .Sidebar {
 	top: 0;
 	left: 0;
-	z-index: 4;
+	width: 100vw;
 	height: 100vh;
-	display: flex;
 	position: absolute;
-	flex-direction: column;
-	width: var(--sidebar-width);
+	&__background {
+		z-index: 3;
+		width: 100%;
+		height: 100%;
+		opacity: 0.5;
+		cursor: pointer;
+		position: absolute;
+		background-color: var(--text-color); }
+	&__bar {
+		top: 0;
+		left: 0;
+		z-index: 4;
+		height: 100vh;
+		display: flex;
+		position: absolute;
+		flex-direction: column;
+		width: var(--sidebar-width); }
 	&__close {
 		width: 40rem;
 		height: 40rem;
