--- a/src/client/components/Header/index.scss
+++ b/src/client/components/Header/index.scss
@@ -17,6 +17,6 @@
 		text-decoration: none;
 		color: var(--text-color); }
 	&__hamburger {
-		margin-left: 3px; }
+		margin-left: 3rem; }
 	&__search {
-		margin-right: 4px; } }
+		margin-right: 4rem; } }
