--- a/src/client/components/UserPage/index.scss
+++ b/src/client/components/UserPage/index.scss
@@ -1,18 +1,11 @@
 .UserPage {
-	padding: var(--space) 0;
 	&__name {
 		font-size: 30rem; }
 	&__details {
-		cursor: pointer;
-		margin-left: calc(var(--space-half) * -1);
-		&:hover,
-		&:focus,
-		&:active {
-			background-color: var(--hover-color); } }
-	&__summary,
-	&__content {
-		padding: var(--space-half); }
+		cursor: pointer; }
 	&__summary {
-		outline: none;}
+		outline: none; }
+	&__content {
+		padding-left: 17rem; }
 	&__select-option::first-letter {
 		text-transform: uppercase; } }
