--- a/src/client/components/Queues/index.scss
+++ b/src/client/components/Queues/index.scss
@@ -1,8 +1,1 @@
-.Queues {
-	&__section {
-		@media (max-width: 640px) {
-			width: 100%; }
-		&-text {
-			color: #757575;
-			font-size: 18rem;
-			margin-bottom: calc(var(--space) * 0.5); } } }
+.Queues {}
