--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -14,6 +14,7 @@
 		margin: 0 var(--space-half);
 		&:focus {
 			outline: none; }
+		&::-moz-range-track,
 		&::-webkit-slider-runnable-track {
 			border: 0;
 			width: 100%;
@@ -21,6 +22,7 @@
 			cursor: pointer;
 			background-color: #e0e0e0;
 			border-radius: var(--border-radius); }
+		&::-moz-range-thumb,
 		&::-webkit-slider-thumb {
 			height: 100%;
 			cursor: pointer;
