--- a/src/client/components/Modal/ModalButton/index.scss
+++ b/src/client/components/Modal/ModalButton/index.scss
@@ -1,8 +1,9 @@
 .ModalButton {
 	width: 300rem;
 	outline: none;
+	display: flex;
 	cursor: pointer;
-	border-radius: none;
+	border-radius: 0;
 	background-color: transparent;
 	transition: 0.2s background-color;
 	border-bottom: 1px solid var(--border-color);
@@ -10,5 +11,8 @@
 		background-color: var(--hover-color); }
 	&:last-child {
 		border-bottom: 0; }
+	&__none {
+		padding: 0;
+		background-color: unset !important; }
 	&__span {
 		color: var(--text-color); } }
