--- a/src/client/components/SongTitle/index.scss
+++ b/src/client/components/SongTitle/index.scss
@@ -3,7 +3,7 @@
 		border: 0;
 		outline: none;
 		cursor: pointer;
-		display: inline;
+		display: inline-block;
 		background-color: transparent;
 		&:hover {
 			text-decoration: underline; } }
