--- a/src/client/components/SongTitle/index.scss
+++ b/src/client/components/SongTitle/index.scss
@@ -3,6 +3,7 @@
 		border: 0;
 		outline: none;
 		cursor: pointer;
+		font-weight: 700;
 		display: inline-block;
 		background-color: transparent;
 		&:hover {
