--- a/src/client/components/SongTitle/index.scss
+++ b/src/client/components/SongTitle/index.scss
@@ -11,3 +11,8 @@
 	&__mix {
 		color: #757575;
 		font-weight: 400; } }
+
+@media (prefers-color-scheme: dark) {
+	.SongTitle {
+		&__mix {
+			color: var(--text-color); } } }
