--- a/src/client/components/Modal/ModalVolume/index.scss
+++ b/src/client/components/Modal/ModalVolume/index.scss
@@ -20,6 +20,7 @@
 		overflow: hidden;
 		height: var(--dim);
 		transform: rotateZ(-90deg);
+		background-color: transparent;
 		&:focus {
 			outline: none; }
 		&::-webkit-slider-runnable-track {
@@ -28,7 +29,7 @@
 			height: 100%;
 			cursor: pointer;
 			border-radius: 9rem;
-			background-color: #e0e0e0; }
+			background-color: var(--hover-color); }
 		&::-webkit-slider-thumb {
 			height: 100%;
 			cursor: pointer;
@@ -37,4 +38,4 @@
 			position: relative;
 			border-radius: 100%;
 			border: 0 solid #000;
-			background-color: #333; } } }
+			background-color: var(--text-color); } } }
