--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -8,10 +8,11 @@
 	&__slider {
 		--dim: 10rem;
 		width: 100%;
-		appearance: none;
 		overflow: hidden;
+		appearance: none;
 		height: var(--dim);
 		margin: 0 var(--space-half);
+		background-color: transparent;
 		&:focus {
 			outline: none; }
 		&::-webkit-slider-runnable-track {
@@ -19,8 +20,8 @@
 			width: 100%;
 			height: 100%;
 			cursor: pointer;
-			background-color: #e0e0e0;
-			border-radius: var(--border-radius); }
+			border-radius: var(--border-radius);
+			background-color: var(--hover-color); }
 		&::-webkit-slider-thumb {
 			height: 100%;
 			cursor: pointer;
@@ -29,4 +30,4 @@
 			position: relative;
 			border-radius: 100%;
 			border: 0 solid #000;
-			background-color: #333; } } }
+			background-color: var(--text-color); } } }
