--- a/src/client/components/Button/index.scss
+++ b/src/client/components/Button/index.scss
@@ -11,7 +11,7 @@
 	background-color: var(--elevated-color);
 	transition: var(--transition-duration) background-color;
 	&:hover {
-		background-color: #e0e0e0; }
+		background-color: #000; }
 	&:active {
 		background-color: #bdbdbd; }
 	&__icon,
